<resources>
    <string name="app_name" translatable="false">E_Cart</string>

    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">E Cart</string>
    <string name="appTitle" translatable="false">E-cart Services</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="skip" translatable="false">"<u>skip</u>"</string>

    <!--VERIFICATION DETAILS-->
    <string name="welcomeQuote" translatable="false">Welcome To E-Cart Service</string>
    <string name="otpEntQuote" translatable="false"><u>Enter five digit otp verification code</u></string>
    <string name="userEntQuote" translatable="false"><u>Please provide your user details :</u></string>
    <string name="userName" translatable="false">User Name</string>
    <string name="emailId" translatable="false">E-Mail Id</string>
    <string name="mobileNo" translatable="false">"Mobile No"</string>
    <string name="password" translatable="false">"Password"</string>
    <string name="cnfPassword" translatable="false">"Confirm Password"</string>
    <string name="nextButton" translatable="false">"Next"</string>
    <string name="otp" translatable="false">OTP</string>
    <string name="resentOtp" translatable="false">Resend Otp</string>
    <string name="todo" translatable="false">TODO</string>


    <!--Bottom Navigation-->
    <string name="title_activity_show_items" translatable="false">ShowItems</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Cart</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_search" translatable="false">Search</string>
    <string name="title_account" translatable="false">Account</string>
</resources>
