<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="serif"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#9a6583"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TableRow
                android:id="@+id/validateMobNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileNoLayout"
                    android:layout_width="340dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:hint="@string/mobileNo"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|right"
                    android:background="@null"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
            </TableRow>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>