<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentSecondary"
    tools:context=".UserDetails">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:text="@string/appTitle"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/userEntQuote"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="italic" />
        </TableRow>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbarStyle="insideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:scrollbarAlwaysDrawVerticalTrack="false">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:gravity="center">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="330dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/userName"
                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:gravity="center">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="330dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/emailId"
                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/emailId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:gravity="center">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="330dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobileNo"
                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/mobileno"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:gravity="center">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="330dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="6dp"
                        android:gravity="center">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/cnfpassword"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="330dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/cnfPassword"
                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </TableRow>

                </TableLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/udNext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_selector_background"
        android:text="@string/nextButton"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/udSkip"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:fontFamily="serif-monospace"
        android:gravity="bottom|end"
        android:text="@string/skip"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorAccent_old"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>